--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask
-gunicorn
-Jinja2
-Werkzeug
-itsdangerous
-click
+Flask==3.0.3
+Werkzeug==3.0.2
+Jinja2==3.1.4
+itsdangerous==2.2.0
+click==8.1.7
+gunicorn==22.0.0
+MarkupSafe==2.1.5
